# CheckPoint-app

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  cabal.project.freeze  cabal.project.local  haskprojeto.cabal
app/: Main.hs
app/Api/: Model.hs
app/Server/: Handler.hs
app/Types/: Examples.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: index.html
frontend/: index.html
