cabal-version:      3.0

name:               haskprojeto

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Renata

maintainer:         renatas.pa@hotmail.com

category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskprojeto

    import:           warnings

    main-is:          Main.hs

    other-modules:      Server.Handler
                        Types.Examples
                        Api.Model

    build-depends:      base ^>=4.18.3.0,
                        servant,
                        servant-server,
                        wai,
                        warp,
                        aeson,
                        postgresql-simple < 0.7,
                        mtl,
                        bytestring

    hs-source-dirs:   app

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
